Bug 157574 - FILEOPEN: DOCX: Two pages document is displayed in one page
Summary: FILEOPEN: DOCX: Two pages document is displayed in one page
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.6.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Justin L
URL:
Whiteboard: target:24.2.0 target:7.6.3
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2023-10-03 12:02 UTC by Xisco Faulí
Modified: 2023-10-05 19:34 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2023-10-03 12:02:09 UTC
Steps to reproduce:
1. Open attachment 75792 [details] from bug 61702

-> The document should be displayed in 2 pages, it only has 1 page

Reproduced in

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 0c4913e03e8427a576138601958f2dbf13b8c37b
CPU threads: 8; OS: Linux 6.1; UI render: default; VCL: gtk3
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded

[Bug found by office-interoperability-tools]
Comment 1 Xisco Faulí 2023-10-03 12:03:03 UTC
Regression introduced by:

author	Justin Luth <justin.luth@collabora.com>	2023-03-14 14:20:58 -0400
committer	Justin Luth <jluth@mail.com>	2023-03-15 01:38:29 +0000
commit 828fde37632a5bb0542b6925454690a5287d6490 (patch)
tree 1adaf348baf39810011cc8c2a18c776c79884b8a
parent 5da513c1f34f657f910d2a9d1af7761cf649574f (diff)
tdf#153613 tdf#146984 writerfilter: split para after anchors

Bisected with: bibisect-linux64-7.6

Adding Cc: to Justin Luth
Comment 2 Xisco Faulí 2023-10-03 12:09:05 UTC
Also reproduced with attachment 82686 [details] from bug 67087
Comment 3 Commit Notification 2023-10-05 14:26:49 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/32102e559eed6eadf2ea146e212a330a3bc897ca

tdf#157574 Revert "tdf#153613 tdf#146984 split para after anchors"

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2023-10-05 19:17:22 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/06702d8474bdac71fa2a61723ea476e888fc91d6

tdf#157574 Revert "tdf#153613 tdf#146984 split para after anchors"

It will be available in 7.6.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.